tests/snapshots/fmt__Comment above expression.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    // boop!
    foo.bar;
    // whoop!
    baz.quux
}
