tests/snapshots/fmt__Comment after expressions.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    foo.bar; // whoop!
    baz.quux // whomp
}
