tests/snapshots/fmt__Comment around expressions.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    // boop!
    foo.bar;
    // whoop!
    baz.quux
    // whomp
}
