tests/snapshots/fmt__Complex if condition.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    if !config.has("trusted-paths") {}
}
