tests/snapshots/fmt__Const func const func.snap
---
source: tests/fmt.rs
expression: formatted
---
const A: a = a;
fn c() {}
const B: b = b;
fn d() {}
