tests/snapshots/fmt__Enum maybe bar.snap
---
source: tests/fmt.rs
expression: formatted
---
enum MaybeBarBar {
    Just(
        BarBarBarBarBarBarBarBar,
        BarBarBarBarBarBarBarBar,
        BarBarBarBarBarBarBarBar,
    ),
    Nothing,
}
