tests/snapshots/fmt__Enum with long type params.snap
---
source: tests/fmt.rs
expression: formatted
---
enum Foo[
    BarBarBarBarBarBarBarBar,
    BazBazBazBazBazBazBazBaz,
    QuuxQuuxQuuxQuuxQuuxQuuxQuux,
] {}
