tests/snapshots/fmt__Filter with two arguments.snap
---
source: tests/fmt.rs
expression: formatted
---
filtermap bgp_in(bgp_msg: BgpMsg, ingress_info: IngressInfo) {}
