tests/snapshots/fmt__If, while, for.snap
---
source: tests/fmt.rs
expression: formatted
---
fn main() {
    if hi {
        print("yay");
    } else {
        print("no");
    }

    while 1 + 2 == 3 {
        print("Still true");
    }

    for x in [1, 2, 3] {
        print("Still true");
    }
}
